모바일 사파리 브라우저에서 footer 위치 에러 수정

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </article>
   </section>
 
-  <footer><p>이 페이지는 윤슬기가 만들었습니다. Twitter <a href="https://twitter.com/@sgyoon_info" target="_blank">@sgyoon_info</a></footer>
+  <footer><p>Twitter <a href="https://twitter.com/@sgyoon_info" target="_blank">@sgyoon_info</a></footer>
 
   <script type="text/javascript" src="script.js"></script>
 </body>
