기본 레이아웃 설정

--- a/02-pick-and-clear/index.html
+++ b/02-pick-and-clear/index.html
@@ -19,19 +19,19 @@
   </div>
 
   <div id="photo-wrapper">
-    <div class="photo">
+    <div id="image1" class="photo">
       <img src="https://images.unsplash.com/photo-1557948206-7478d769f813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1834&q=80" alt="">
     </div>
-    <div class="photo">
+    <div id="image1" class="photo">
       <img src="https://images.unsplash.com/photo-1549545931-59bf067af9ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1858&q=80" alt="">
     </div>
-    <div class="photo">
+    <div id="image1" class="photo">
       <img src="https://images.unsplash.com/photo-1486272255519-c4634109f205?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="">
     </div>
-    <div class="photo">
+    <div id="image1" class="photo">
       <img src="https://images.unsplash.com/photo-1532446321581-71f7c197e006?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="">
     </div>
-    <div class="photo">
+    <div id="image1" class="photo">
       <img src="https://images.unsplash.com/photo-1566155521025-d08deae11890?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="">
     </div>
   </div>
