이미지 클릭 시 아이템의 flex-grow값 변경 및 해당 이미지의 blur값 변경 구현

--- a/02-pick-and-clear/index.html
+++ b/02-pick-and-clear/index.html
@@ -12,26 +12,26 @@
 
   <div id="controls-wapper">
     <div id="controls">
-      <p>blur</p>
-      <input type="range" min="0" max="50">
+      <lable for="blur">blur</lable>
+      <input type="range" id="blur" name="blur" min="0" max="30" step="5" value="0">
       <p>clear</p>
     </div>
   </div>
 
   <div id="photo-wrapper">
-    <div id="image1" class="photo">
+    <div class="photo">
       <img src="https://images.unsplash.com/uploads/141319662617846f3b4c9/1677b57d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1355&q=80" alt="">
     </div>
-    <div id="image1" class="photo">
+    <div class="photo">
       <img src="https://images.unsplash.com/photo-1515073883629-5e2924e3e106?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="">
     </div>
-    <div id="image1" class="photo">
+    <div class="photo">
       <img src="https://images.unsplash.com/photo-1486272255519-c4634109f205?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="">
     </div>
-    <div id="image1" class="photo">
+    <div class="photo">
       <img src="https://images.unsplash.com/photo-1532446321581-71f7c197e006?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="">
     </div>
-    <div id="image1" class="photo">
+    <div class="photo">
       <img src="https://images.unsplash.com/photo-1529093589387-b486dcc37c15?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="">
     </div>
   </div>
