--- a/02-pick-and-clear/index.html
+++ b/02-pick-and-clear/index.html
@@ -2,42 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Gothic+A1:400,600&display=swap" rel="stylesheet">
   <title>Pick and Clear</title>
 </head>
 <body>
-  <header><a href="#">Back to list</a></header>
-
+  <header>
+    <a href="../index.html">Back to list</a>
+    <a href="https://velog.io/@sgyoon" target="_blank">https://velog.io/@sgyoon</a>
+  </header>
+  <div id="infomation">
+    <p>무슨 사진일까요? 사진을 클릭하고 바를 움직여서 확인해보세요. 다시 클릭하면 줄어듭니다.</p>
+  </div>
   <div id="controls-wapper">
     <div id="controls">
-      <lable for="blur">blur</lable>
-      <input type="range" id="blur" name="blur" min="0" max="30" step="5" value="0">
-      <p>clear</p>
+      <label for="blur">흐리게</label>
+      <input type="range" id="blur" name="blur" min="0" max="30" value="0">
+      <label for="blur">선명하게</label>
     </div>
   </div>
 
   <div id="photo-wrapper">
     <div class="photo">
-      <img src="https://images.unsplash.com/uploads/141319662617846f3b4c9/1677b57d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1355&q=80" alt="">
+      <img src="https://images.unsplash.com/uploads/141319662617846f3b4c9/1677b57d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1355&q=80" alt="벽돌길 위에 앉아 있는 주황색 고양이의 뒷모습">
     </div>
     <div class="photo">
-      <img src="https://images.unsplash.com/photo-1515073883629-5e2924e3e106?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="">
+      <img src="https://images.unsplash.com/photo-1515073883629-5e2924e3e106?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="창가 소파에서 자는 검은색 줄무늬 고양이">
     </div>
     <div class="photo">
-      <img src="https://images.unsplash.com/photo-1486272255519-c4634109f205?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="">
+      <img src="https://images.unsplash.com/photo-1486272255519-c4634109f205?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="대문 앞에 앉아 있는 털이 풍성한 주황색 고양이">
     </div>
     <div class="photo">
-      <img src="https://images.unsplash.com/photo-1532446321581-71f7c197e006?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="">
+      <img src="https://images.unsplash.com/photo-1532446321581-71f7c197e006?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="잎사귀가 없는 나뭇가지 덤불 사이에 앉아 있는 갈색 줄무늬 고양이">
     </div>
     <div class="photo">
-      <img src="https://images.unsplash.com/photo-1529093589387-b486dcc37c15?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="">
+      <img src="https://images.unsplash.com/photo-1529093589387-b486dcc37c15?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="오른쪽을 바라보고 있는 검은색 고양이의 옆얼굴">
     </div>
   </div>
-
-  <footer><a href="https://velog.io/@sgyoon">https://velog.io/@sgyoon</a></footer>
-
+  
+  <footer></footer>
   <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
