이미지 하나를 클릭하여 선택 시 다른 이미지를 클릭할 수 없도록 수정

--- a/02-pick-and-clear/index.html
+++ b/02-pick-and-clear/index.html
@@ -17,9 +17,9 @@
   </div>
   <div id="controls-wapper">
     <div id="controls">
-      <label for="blur">흐리게</label>
+      <label for="blur" class="label">흐리게</label>
       <input type="range" id="blur" name="blur" min="0" max="30" value="0">
-      <label for="blur">선명하게</label>
+      <label for="blur" class="label">선명하게</label>
     </div>
   </div>
 
