키보드 조작 시 tabindex와 focus 순서 조정

--- a/02-pick-and-clear/index.html
+++ b/02-pick-and-clear/index.html
@@ -18,25 +18,25 @@
   <div id="controls-wapper">
     <div id="controls">
       <label for="blur" class="label">흐리게</label>
-      <input type="range" id="blur" name="blur" min="0" max="30" value="0">
+      <input type="range" id="blur" name="blur" min="0" max="30" value="0" tabindex="-1">
       <label for="blur" class="label">선명하게</label>
     </div>
   </div>
 
   <div id="photo-wrapper">
-    <div class="photo">
+    <div class="photo" tabindex="0">
       <img src="https://images.unsplash.com/uploads/141319662617846f3b4c9/1677b57d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1355&q=80" alt="벽돌길 위에 앉아 있는 주황색 고양이의 뒷모습">
     </div>
-    <div class="photo">
+    <div class="photo" tabindex="0">
       <img src="https://images.unsplash.com/photo-1515073883629-5e2924e3e106?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="창가 소파에서 자는 검은색 줄무늬 고양이">
     </div>
-    <div class="photo">
+    <div class="photo" tabindex="0">
       <img src="https://images.unsplash.com/photo-1486272255519-c4634109f205?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="대문 앞에 앉아 있는 털이 풍성한 주황색 고양이">
     </div>
-    <div class="photo">
+    <div class="photo" tabindex="0">
       <img src="https://images.unsplash.com/photo-1532446321581-71f7c197e006?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="잎사귀가 없는 나뭇가지 덤불 사이에 앉아 있는 갈색 줄무늬 고양이">
     </div>
-    <div class="photo">
+    <div class="photo" tabindex="0">
       <img src="https://images.unsplash.com/photo-1529093589387-b486dcc37c15?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="오른쪽을 바라보고 있는 검은색 고양이의 옆얼굴">
     </div>
   </div>
