프로젝트 2번 Pick and Clear 링크 생성

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </article>
 
     <article>
-      <img src="imgs/thumb-00.png" alt="">
-      <h2 class="project-title coming-soon">Coming Soon</h2>
-      <p class="explain"></p>
-      <p class="tag"></p>
+      <a href="02-pick-and-clear/index.html"><img src="imgs/thumb-02.jpg"" alt="Project thumbnail"></a>
+      <h2 class="project-title">Pick and Clear</h2>
+      <p class="explain">흐릿한 이미지들... 뭐가 담겨있을까요? 바를 조정해 선명하게 만들어보세요.</p>
+      <p class="tag"><mark>Desktop Only</mark></p>
     </article>
     <article>
       <img src="imgs/thumb-00.png" alt="">
